# auxilab-hackathon

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260605_0815-dbf14c43de00_initial_schema.py  20260605_1717-07d8b779de6e_policy_documents_chunks_rules.py  20260628_1740-3efc5235cd96_users_and_email_verifications.py
docs/: README.md  api-reference.md  architecture.md  configuration.md  data-model.md  deployment.md  local-testing.md  mcp-tools.md  policy-engine.md  policy-rag.md
scripts/: demo.py  entrypoint.sh  seed.py  setup.sh
src/ap_invoice/api/: deps.py  errors.py  main.py  ratelimit.py
src/ap_invoice/api/routes/: admin.py  api_keys.py  auth.py  health.py  invoices.py  policies.py  tools.py  vendors.py
src/ap_invoice/core/: config.py  enums.py  jwt.py  logging.py  security.py
src/ap_invoice/db/: base.py  session.py
src/ap_invoice/mcp/: server.py
src/ap_invoice/models/: __init__.py  audit.py  invoice.py  organization.py  policy_document.py  user.py  vendor.py
src/ap_invoice/schemas/: auth.py  common.py  invoice.py  organization.py  policy_document.py  processing.py  tools.py  vendor.py
src/ap_invoice/services/: __init__.py  _parsing.py  accounts.py  auth.py  completeness.py  duplicate_detector.py  ingestion.py  llm_decision.py  orchestrator.py  payment_terms.py  policy_compiler.py  policy_engine.py  policy_guardrails.py  rag.py  reporting.py  vendor_normaliser.py  workflow.py
src/ap_invoice/services/email/: __init__.py
src/ap_invoice/services/extraction/: __init__.py  deterministic.py  engine.py  files.py  llm.py  ocr.py
src/ap_invoice/services/llm/: __init__.py  providers.py
tests/: conftest.py
tests/integration/: conftest.py  test_api_auth.py  test_api_auth_flow.py  test_api_invoices.py  test_api_multifile.py  test_api_pipeline.py  test_api_policies.py  test_api_status.py  test_api_vendors.py  test_e2e_expectation.py  test_mcp_server.py  test_reporting.py
tests/unit/: test_completeness.py  test_config.py  test_duplicate_detector.py  test_extraction.py  test_extraction_files.py  test_jwt.py  test_llm_decision.py  test_llm_providers.py  test_otp.py  test_passwords.py  test_payment_terms.py  test_policy_compiler.py  test_policy_engine.py  test_policy_guardrails.py  test_rag.py  test_safety.py  test_security.py  test_vendor_normaliser.py
