[project]
name = "ap-invoice-intelligence"
version = "0.1.0"
description = "AP Invoice Intelligence — REST API + MCP server for AI-agent-driven invoice automation against per-vendor policies."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "AP Invoice Intelligence Contributors" }]
keywords = ["accounts-payable", "invoice", "mcp", "ai-agent", "fastapi", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Accounting",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "greenlet>=3.1.0",
    "mcp>=1.2.0",
    "anthropic>=0.40.0",
    "openai>=1.40.0",
    "pypdfium2>=4.30.0",
    "pillow>=10.4.0",
    "httpx>=0.27.0",
    "python-dateutil>=2.9.0",
    "rapidfuzz>=3.10.0",
    "structlog>=24.4.0",
    "argon2-cffi>=23.1.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "anyio>=4.6.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "types-python-dateutil>=2.9.0",
    "asgi-lifespan>=2.1.0",
]

[project.scripts]
ap-invoice-api = "ap_invoice.api.main:run"
ap-invoice-mcp = "ap_invoice.mcp.server:run"

[project.urls]
Homepage = "https://github.com/AuxiLabs/auxilab-mcp-ap-invoice"
Documentation = "https://github.com/AuxiLabs/auxilab-mcp-ap-invoice/tree/main/docs"
Repository = "https://github.com/AuxiLabs/auxilab-mcp-ap-invoice"
Issues = "https://github.com/AuxiLabs/auxilab-mcp-ap-invoice/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ap_invoice"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF", "ASYNC", "S"]
ignore = ["S101"]  # allow assert in tests

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S105", "S106", "S311", "E501"]
"alembic/**" = ["E501", "F401"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
module = ["slowapi.*", "mcp.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
markers = [
    "integration: tests that require a live PostgreSQL database",
]

[tool.coverage.run]
source = ["src/ap_invoice"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
